Agregue los archivos del profe

--- a/ProyectoIA1.1.fsproj
+++ b/ProyectoIA1.1.fsproj
@@ -7,7 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Utils.fs" />
+    <Compile Include="Pila.fs" />
+    <Compile Include="Capitulo3.fs" />
+    <Compile Include="DFS.fs" />
+    <Compile Include="CSP.fs" />
+    <Compile Include="SudokuCSP.fs" />
+    <Compile Include="Busqueda.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
+
 
 </Project>
